# cfboundary

./: .gitignore  API_SURFACE_AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATING_FROM_PLANET_CF.md  MIGRATING_FROM_TASCHE.md  RATIONALE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml
cfboundary/: __init__.py  cli.py  http.py
cfboundary/adapters/: response.py  scheduled.py  streams.py
cfboundary/checks/: __init__.py  ffi_boundary.py  handler_consistency.py  pyodide_pitfalls.py  vendor.py
cfboundary/compat/: probes.py
cfboundary/deploy/: orchestrator.py  validator.py  verifier.py
cfboundary/ffi/: __init__.py  core.py  primitives.py  runtime.py  safe_env.py
cfboundary/testing/: __init__.py  fakes.py  smoke.py
docs/: api-surface-audit.md  application-adapters.md  before-after.md  compatibility-matrix.md  deep-audit-2026-04-25.md  index.md  migrating-from-local-wrappers.md  migrating-from-product-specific-wrappers.md  pre-release-checklist.md  pre-release-execution-2026-04-25.md  rationale.md  surface-polish.md  testing.md  wrapper-audit.md
examples/basic_worker/: README.md
examples/live_worker/: README.md  pyproject.toml  wrangler.jsonc
examples/live_worker/migrations/: 0001_schema.sql
examples/live_worker/scripts/: prepare_deploy.py
examples/live_worker/src/: entry.py
examples/testing/: README.md
gasket/: __init__.py  cli.py  http.py
gasket/adapters/: __init__.py  response.py  scheduled.py  streams.py
gasket/checks/: __init__.py  common.py  ffi_boundary.py  handler_consistency.py  pyodide_pitfalls.py  vendor.py
gasket/compat/: __init__.py  probes.py
gasket/deploy/: __init__.py  orchestrator.py  validator.py  verifier.py
gasket/ffi/: __init__.py  primitives.py  safe_env.py
gasket/testing/: fakes.py  smoke.py
tests/: test_adapters_checks_cli.py  test_bindings.py  test_compat_runtime.py  test_conversion_edges.py  test_core.py  test_coverage_edges.py  test_ffi_matrix.py  test_http.py  test_more_coverage.py  test_optional_imports.py  test_remaining_edges.py  test_runtime_config.py  test_safe_env_edges.py  test_surface_polish.py
tests/e2e/: test_live_worker.py
