[project]
name = "gasket"
version = "0.1.0"
description = "Generic Cloudflare Python Workers FFI boundary, checks, and deployment helpers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Adewale Oshineye"}]
keywords = ["cloudflare", "workers", "pyodide", "ffi", "d1", "r2", "kv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/adewale/gasket"
Documentation = "https://github.com/adewale/gasket/tree/main/docs"
Issues = "https://github.com/adewale/gasket/issues"

[project.scripts]
gasket = "gasket.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gasket"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
