[project]
name = "cfboundary"
version = "0.1.9"
description = "Small Cloudflare Python Workers FFI boundary helper library"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Adewale Oshineye"}]
keywords = ["cloudflare", "workers", "pyodide", "ffi", "d1", "r2", "kv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Pytest",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "hypothesis>=6.100", "pytest-cov>=5.0"]
dev = ["pytest>=8.0", "hypothesis>=6.100", "pytest-cov>=5.0", "ruff>=0.8"]

[dependency-groups]
dev = ["pytest>=8.0", "hypothesis>=6.100", "pytest-cov>=5.0", "ruff>=0.8"]

[project.urls]
Homepage = "https://github.com/adewale/cfboundary"
Documentation = "https://github.com/adewale/cfboundary/tree/main/docs"
Issues = "https://github.com/adewale/cfboundary/issues"
Changelog = "https://github.com/adewale/cfboundary/blob/main/CHANGELOG.md"
Security = "https://github.com/adewale/cfboundary/blob/main/SECURITY.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cfboundary"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["cfboundary"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
